--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-torch>=2.0
-opencv-python
+torch==2.1.0
+torchvision==0.16.0
+numpy==1.26.4
+opencv-python==4.8.0.76
 wrapt==1.14.1
-tqdm
-matplotlib
-albumentations
-pandas 
-streamlit
+tqdm==4.66.1
+matplotlib==3.8.0
+albumentations==1.3.1
+pandas==2.2.3
+streamlit==1.45.0
