--- a/config/shuttletrack.yaml
+++ b/config/shuttletrack.yaml
@@ -12,10 +12,10 @@ model:
   use_frame_diff: true
   use_trajectory_inpainting: true
 training:
-  batch_size: 8
+  batch_size: 32  # Increased for better GPU utilization (was 8)
   epochs: 50
   learning_rate: 0.0005
-  num_workers: 10
+  num_workers: 16  # Increased for faster data loading (was 10)
   persistent_workers: true
   scheduler: cosine
   warmup_epochs: 5
