Enhance streamlit_app.py with trajectory visualization improvements
- Introduced a deque for managing fading trajectory visualization, allowing for smoother rendering of shuttlecock paths.
- Integrated drawing functions from visualize.py to replace direct circle and line drawing, improving code modularity and readability.
- Updated .gitignore to include additional processed files for better project management.

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ data/
 ShuttleCockFrameDataset/ 
 processed_data/
 processed_data.zip
+et --hard HEAD~2
+runs/shuttletrack/events.out.tfevents.1747504905.SeoYea-Ji.55200.0
