Update model architecture and training process
- Changed CNN backbone from ResNet18 to EfficientNetB3 for improved feature extraction.
- Enhanced transformer model parameters: increased layers to 4 and attention heads to 8, with added dropout rates for better regularization.
- Introduced loss weights configuration in training to allow for more flexible loss function tuning.
- Added gradient clipping to prevent exploding gradients during training.
- Updated preprocessing to compute median images for improved frame differencing.
- Included new metrics and insights generation in the training script for better monitoring of training progress.

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ processed_data/
 processed_data.zip
 et --hard HEAD~2
 runs/shuttletrack/events.out.tfevents.1747504905.SeoYea-Ji.55200.0
+results/output_with_trajectory.mp4
