Enhance preprocessing script and update .gitignore
- Added Gaussian heatmap generation and optical flow computation functions to the preprocessing script.
- Updated the process_segment function to include heatmap and flow calculations, along with improved directory management for outputs.
- Modified the verification process to check for the existence of new output files and metadata.
- Added a new entry to .gitignore for improvement.md.

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ et --hard HEAD~2
 runs/shuttletrack/events.out.tfevents.1747504905.SeoYea-Ji.55200.0
 results/output_with_trajectory.mp4
 assets/cursor_kaggle_training_script_path_issu.md
+improvement.md
