--- a/config/shuttletrack.yaml
+++ b/config/shuttletrack.yaml
@@ -4,26 +4,46 @@ data:
 device: cuda
 model:
   cnn_backbone: efficientnet_b3
-  input_size: 224
+  input_size: [360, 640]  # height, width
   sequence_length: 5
-  transformer_layers: 4
+  heatmap_size: 64
+  feature_dim: 256
   transformer_nhead: 8
+  transformer_layers: 4
   dropout: 0.2
   attn_dropout: 0.1
-  type: hybrid
-  use_frame_diff: true
-  use_trajectory_inpainting: true
+  use_optical_flow: true
+  predict_uncertainty: true
 training:
-  batch_size: 32  # Increased for better GPU utilization (was 8)
-  epochs: 50
-  learning_rate: 0.0005
-  num_workers: 16  # Increased for faster data loading (was 10)
-  persistent_workers: true
-  scheduler: cosine
-  warmup_epochs: 5
-  weight_decay: 0.01
+  batch_size: 16
+  learning_rate: 0.0001
+  weight_decay: 0.0001
+  epochs: 100
+  num_workers: 4
   gradient_clip_val: 1.0
-  loss_weights:  # Loss weights for BCE, MSE, and smooth losses
+  
+  # Loss function weights
+  loss_weights:
     bce: 1.0
-    mse: 10.0
-    smooth: 0.05
+    focal_bce: 1.5
+    mse: 1.0
+    focal: 0.8
+    smooth: 0.15
+    smooth_l1: 0.5
+    uncertainty: 0.2
+  
+  # Focal loss parameters
+  focal_gamma: 2.0
+
+# Post-processing configuration for trajectory smoothing
+post_processing:
+  # Smoothing options: 'kalman', 'savgol', 'moving_avg'
+  smooth_mode: 'kalman'
+  smooth_window_size: 5  # Window size for smoothing filters
+  
+  # Inpainting options: 'linear', 'spline', 'pchip'
+  inpaint_method: 'spline'
+  
+  # Visibility processing
+  visibility_threshold: 0.5  # Threshold for binary visibility
+  visibility_smooth_window: 3  # Window size for visibility smoothing
