--- a/config/shuttletrack.yaml
+++ b/config/shuttletrack.yaml
@@ -15,12 +15,13 @@ model:
   use_optical_flow: true
   predict_uncertainty: true
 training:
-  batch_size: 8
+  batch_size: 4
   learning_rate: 0.0001
   weight_decay: 0.0001
-  epochs: 100
-  num_workers: 4
+  epochs: 10
+  num_workers: 2
   gradient_clip_val: 1.0
+  pin_memory: true
   
   # Loss function weights
   loss_weights:
