--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ runs/shuttletrack/events.out.tfevents.1747504905.SeoYea-Ji.55200.0
 results/output_with_trajectory.mp4
 assets/cursor_kaggle_training_script_path_issu.md
 improvement.md
+train.log.txt
