--- a/config/shuttletrack.yaml
+++ b/config/shuttletrack.yaml
@@ -1,8 +1,7 @@
 data:
   processed_dataset_path: processed_data
   raw_dataset_path: ShuttleCockFrameDataset
-  exclude_train_folders: [match3, match4, match5, match6, match7, match8, match9, match10, match11, match12, match13, match14, match15, match16, match17, match18, match19, match20, match21, match22, match23, match24, match25, match26]  # e.g., [match1, match2]
-  exclude_valid_folders: [match2,match3]  # e.g., [match28, match29]
+  # e.g., [match28, match29]
 
 device: cuda
 model:
